src/index.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
  background-color: #333;
  color: #fff;
}

.logo {
  font-size: 24px;
  font-weight: bold;
}

.hamburger {
  display: none;
  flex-direction: column;
  cursor: pointer;
}


@media (max-width: 768px) {
  .menu {
    display: none;
    flex-direction: column;
    width: 100%;
  }

  .menu.open {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hamburger {
    display: flex;
  }
}

